# similiraptor

./: .gitignore  README.md  pyproject.toml
imgsimsearch/: __init__.py  abstract_image_provider.py  approximate_comparator.py  graph.py  miniature.py  native_fine_comparator.py
native/: CMakeLists.txt
native/src/: core.hpp  similiraptor.cpp  similiraptor.hpp
similiraptor/: clibrary.py  core.py  profiling.py  system.py
tests/: brute_force_sim_per_img_k0_count_r2_l3x10.html  brute_force_sim_per_img_k0_count_r2_l3x10.json  brute_force_sim_per_img_k0_count_r2_l3x10_no_norm.html  brute_force_sim_per_img_k0_count_r2_l3x10_no_norm.json  brute_force_sim_per_img_k0_count_r2_norm.html  brute_force_sim_per_img_k0_count_r2_norm.json  brute_force_similarities.html  brute_force_similarities.json  brute_force_similarities.py  brute_force_similarities_per_image.html  brute_force_similarities_per_image.json  brute_force_similarities_per_image_k0.html  brute_force_similarities_per_image_k0.json  brute_force_similarities_per_image_k0_count.html  brute_force_similarities_per_image_k0_count.json  brute_force_similarities_per_image_k0_count_r2.html  brute_force_similarities_per_image_k0_count_r2.json  brute_force_similarities_per_image_k1.html  brute_force_similarities_per_image_k1.json  brute_force_similarities_per_image_k3.html  brute_force_similarities_per_image_k3.json  brute_force_similarities_per_image_k4.html  brute_force_similarities_per_image_k4.json  dataset.py  dataset_provider.py  dataset_similarities.html  dataset_similarities.json  empiric_similarities.json  profiling.py  (+8 more)
(+7 files in other folders)
